--- a/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
+++ b/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\ShaderSource.h" />
     <ClInclude Include="src\Shape.h" />
+    <ClInclude Include="src\ShapeCube.h" />
     <ClInclude Include="src\Sprite.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\TextureImporter.h" />
@@ -40,6 +41,7 @@
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shape.cpp" />
+    <ClCompile Include="src\ShapeCube.cpp" />
     <ClCompile Include="src\Sprite.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
     <ClCompile Include="src\Time.cpp" />
