--- a/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
+++ b/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\Entity2D.h" />
     <ClInclude Include="src\Input.h" />
+    <ClInclude Include="src\Light.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\ShaderSource.h" />
     <ClInclude Include="src\Shape.h" />
@@ -40,6 +41,7 @@
     <ClCompile Include="src\Basegame.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Input.cpp" />
+    <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shape.cpp" />
     <ClCompile Include="src\ShapeCube.cpp" />
