--- a/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
+++ b/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
@@ -21,15 +21,18 @@
   <ItemGroup>
     <ClInclude Include="src\Basegame.h" />
     <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\DirectionalLight.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\Entity2D.h" />
     <ClInclude Include="src\Export.h" />
     <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\Light.h" />
+    <ClInclude Include="src\PointLight.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\ShaderSource.h" />
     <ClInclude Include="src\Shape.h" />
     <ClInclude Include="src\ShapeCube.h" />
+    <ClInclude Include="src\SpotLight.h" />
     <ClInclude Include="src\Sprite.h" />
     <ClInclude Include="src\SpriteCube.h" />
     <ClInclude Include="src\stb_image.h" />
@@ -41,11 +44,14 @@
   <ItemGroup>
     <ClCompile Include="src\Basegame.cpp" />
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\DirectionalLight.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Light.cpp" />
+    <ClCompile Include="src\PointLight.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shape.cpp" />
     <ClCompile Include="src\ShapeCube.cpp" />
+    <ClCompile Include="src\SpotLight.cpp" />
     <ClCompile Include="src\Sprite.cpp" />
     <ClCompile Include="src\SpriteCube.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
