--- a/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj.filters
+++ b/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj.filters
@@ -55,11 +55,20 @@
     <Filter Include="Source\SpriteCube">
       <UniqueIdentifier>{669f685d-fd98-4c31-b146-1f62b9d00d16}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source\Light">
-      <UniqueIdentifier>{bcc788a6-ce98-4683-8197-905ef210400f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source\Export">
       <UniqueIdentifier>{a39ec58e-ec35-4178-8303-f63536a42b85}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Lights">
+      <UniqueIdentifier>{bcc788a6-ce98-4683-8197-905ef210400f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Lights\DirectionalLight">
+      <UniqueIdentifier>{ab81c288-90cd-43e7-b229-e87964661160}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Lights\PointLight">
+      <UniqueIdentifier>{a06efe4f-6b13-49fd-9470-35916b404aad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Lights\SpotLight">
+      <UniqueIdentifier>{f8d80249-9da7-434c-bed7-bcc8e93beed1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -112,10 +121,19 @@
       <Filter>Source\SpriteCube</Filter>
     </ClInclude>
     <ClInclude Include="src\Light.h">
-      <Filter>Source\Light</Filter>
+      <Filter>Source\Lights</Filter>
     </ClInclude>
     <ClInclude Include="src\Export.h">
       <Filter>Source\Export</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DirectionalLight.h">
+      <Filter>Source\Lights\DirectionalLight</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PointLight.h">
+      <Filter>Source\Lights\PointLight</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SpotLight.h">
+      <Filter>Source\Lights\SpotLight</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -153,7 +171,16 @@
       <Filter>Source\SpriteCube</Filter>
     </ClCompile>
     <ClCompile Include="src\Light.cpp">
-      <Filter>Source\Light</Filter>
+      <Filter>Source\Lights</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DirectionalLight.cpp">
+      <Filter>Source\Lights\DirectionalLight</Filter>
+    </ClCompile>
+    <ClCompile Include="src\PointLight.cpp">
+      <Filter>Source\Lights\PointLight</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SpotLight.cpp">
+      <Filter>Source\Lights\SpotLight</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
