--- a/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
+++ b/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
@@ -27,6 +27,8 @@
     <ClInclude Include="src\Export.h" />
     <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\Light.h" />
+    <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\PointLight.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\ShaderSource.h" />
@@ -47,6 +49,8 @@
     <ClCompile Include="src\DirectionalLight.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Light.cpp" />
+    <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\PointLight.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shape.cpp" />
