--- a/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj.filters
+++ b/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj.filters
@@ -70,6 +70,12 @@
     <Filter Include="Source\Lights\SpotLight">
       <UniqueIdentifier>{f8d80249-9da7-434c-bed7-bcc8e93beed1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Mesh">
+      <UniqueIdentifier>{fb529eae-d1b1-4025-a9de-1a951835cdd7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Model">
+      <UniqueIdentifier>{506b1164-49d9-44b8-8078-7757e9fd0da8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Window.h">
@@ -135,6 +141,12 @@
     <ClInclude Include="src\SpotLight.h">
       <Filter>Source\Lights\SpotLight</Filter>
     </ClInclude>
+    <ClInclude Include="src\Mesh.h">
+      <Filter>Source\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Model.h">
+      <Filter>Source\Model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Window.cpp">
@@ -181,6 +193,12 @@
     </ClCompile>
     <ClCompile Include="src\SpotLight.cpp">
       <Filter>Source\Lights\SpotLight</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Mesh.cpp">
+      <Filter>Source\Mesh</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Model.cpp">
+      <Filter>Source\Model</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
