--- a/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
+++ b/Graphics-Engine/Graphics-Engine/Graphics-Engine.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="src\Light.h" />
     <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\Model.h" />
+    <ClInclude Include="src\ModelImporter.h" />
     <ClInclude Include="src\PointLight.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\ShaderSource.h" />
@@ -51,6 +52,7 @@
     <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
+    <ClCompile Include="src\ModelImporter.cpp" />
     <ClCompile Include="src\PointLight.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shape.cpp" />
